# mcp-bildsprache

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.claude/agent-memory/komodo-infra/: MEMORY.md  project_bildsprache_stack.md  project_bildsprache_volumes.md
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release.yml  shared-contract-check.yml
docs/identity/: README.md  manifest.example.json
mcp_bildsprache/: __init__.py  __main__.py  attribution.py  auth.py  brands.py  config.py  diagrams.py  identity.py  jobs.py  ledger.py  models.py  pipeline.py  presets.py  server.py  slugs.py  storage.py  types.py
mcp_bildsprache/_shared/: compute_cost.py  provider_costs.v1.yaml
mcp_bildsprache/gallery/: __init__.py  app.py  index.py  middleware.py
mcp_bildsprache/gallery/static/: README.md  app.js  index.html  styles.css
mcp_bildsprache/providers/: __init__.py  bfl.py  gemini.py  openai.py  recraft.py
openspec/: config.yaml
openspec/changes/add-image-gallery/: design.md  proposal.md  tasks.md
openspec/changes/add-image-gallery/specs/image-gallery/: spec.md
openspec/changes/add-personal-reference-images/: design.md  proposal.md  tasks.md
openspec/changes/add-personal-reference-images/specs/personal-identity-preset/: spec.md
openspec/changes/add-personal-reference-images/specs/reference-image-input/: spec.md
openspec/changes/simplify-render-async/: proposal.md  tasks.md
openspec/changes/simplify-render-async/specs/image-render/: spec.md
tests/: test_attribution.py  test_auth.py  test_brands.py  test_cf_access.py  test_config.py  test_cost_confirmation.py  test_diagrams.py  test_gallery_api.py  test_gallery_frontend.py  test_gallery_index.py  test_identity.py  test_integration.py  test_jobs.py  test_ledger.py  test_pipeline.py  test_presets.py  test_providers.py  test_providers_openai.py  test_storage.py
