[project]
name = "mcp-bildsprache"
version = "0.3.43"
description = "MCP server for brand-aware image generation — Gemini, FLUX.2 Pro, Recraft V4"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.4.2,<4.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.14.2",
    "pillow>=11.0.0",
    "piexif>=1.1.3",
    "python-slugify>=8.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    # Security floors (transitive deps of fastmcp; pinned to address CVEs)
    "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
    "python-multipart>=0.0.32",  # GHSA: DoS via unbounded multipart headers
]

[project.scripts]
mcp-bildsprache = "mcp_bildsprache.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_bildsprache"]

[tool.hatch.build.targets.wheel.force-include]
"mcp_bildsprache/_shared/ai_attribution.schema.json" = "mcp_bildsprache/_shared/ai_attribution.schema.json"
"mcp_bildsprache/_shared/provider_costs.v1.yaml" = "mcp_bildsprache/_shared/provider_costs.v1.yaml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]
